cloudformation/default-vpc.yaml
---
AWSTemplateFormatVersion: "2010-09-09"
Description: Default VPC

Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      -
        Label:
          default: VPC Name
        Parameters:
          - VPCName
      -
        Label:
          default: VPC Availability Zones
        Parameters:
          - AvailabilityZone1
          - AvailabilityZone2
          - AvailabilityZone3
      -
        Label:
          default: CIDR Blocks
        Parameters:
          - VPCCIDRBlock
          - PublicSubnet1CIDR
          - PublicSubnet2CIDR
          - PublicSubnet3CIDR
          - PrivateSubnet1CIDR
          - PrivateSubnet2CIDR
          - PrivateSubnet3CIDR

Parameters:
  VPCName:
    Type: String
    Description: VPC Name

  AvailabilityZone1:
    Type: AWS::EC2::AvailabilityZone::Name
    Description: Availability Zone 2

  AvailabilityZone2:
    Type: AWS::EC2::AvailabilityZone::Name
    Description: Availability Zone 2

  AvailabilityZone3:
    Type: AWS::EC2::AvailabilityZone::Name
    Description: Availability Zone 3

  VPCCIDRBlock:
    Type: String
    Description: VPC CIDR Block
    Default: "10.0.0.0/16"

  PublicSubnet1CIDR:
    Type: String
    Description: Public Subnet 1 CIDR Block
    Default: "10.0.1.0/24"

  PublicSubnet2CIDR:
    Type: String
    Description: Public Subnet 2 CIDR Block
    Default: "10.0.2.0/24"

  PublicSubnet3CIDR:
    Type: String
    Description: Public Subnet 3 CIDR Block
    Default: "10.0.3.0/24"

  PrivateSubnet1CIDR:
    Type: String
    Description: Private Subnet 1 CIDR Block
    Default: "10.0.11.0/24"

  PrivateSubnet2CIDR:
    Type: String
    Description: Private Subnet 2 CIDR Block
    Default: "10.0.12.0/24"

  PrivateSubnet3CIDR:
    Type: String
    Description: Private Subnet 3 CIDR Block
    Default: "10.0.13.0/24"

Resources:
  DefaultVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VPCCIDRBlock
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      InstanceTenancy: default
      Tags:
      - Key: Name
        Value:  !Ref VPCName

  DefaultVPCIGW:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags:
      - Key: Name
        Value: !Ref VPCName

  IGWRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: DefaultVPCIGW

  AttachIGW:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: DefaultVPC
      InternetGatewayId:
        Ref: DefaultVPCIGW

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: DefaultVPC
      Tags:
      - Key: Name
        Value: "Private Route Table"

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: DefaultVPC
      Tags:
      - Key: Name
        Value: "Public Route Table"

  DefaultNATGW:
    DependsOn: AttachIGW
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
        - DefaultNATGWNATGWEIP
        - AllocationId
      SubnetId:
        Ref: PublicSubnet1

  DefaultNATGWNATGWEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  NATGWRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: DefaultNATGW

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: DefaultVPC
      CidrBlock: !Ref PublicSubnet1CIDR
      AvailabilityZone:
        Ref: AvailabilityZone1
      Tags:
      - Key: Name
        Value: "Public Subnet 1"

  PublicSubnet1RouteAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: PublicSubnet1
      RouteTableId:
        Ref: PublicRouteTable

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: DefaultVPC
      CidrBlock: !Ref PublicSubnet2CIDR
      AvailabilityZone:
        Ref: AvailabilityZone2
      Tags:
      - Key: Name
        Value: "Public Subnet 2"

  PublicSubnet2RouteAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: PublicSubnet2
      RouteTableId:
        Ref: PublicRouteTable

  PublicSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: DefaultVPC
      CidrBlock: !Ref PublicSubnet3CIDR
      AvailabilityZone:
        Ref: AvailabilityZone3
      Tags:
      - Key: Name
        Value: "Public Subnet 3"

  PublicSubnet3RouteAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: PublicSubnet3
      RouteTableId:
        Ref: PublicRouteTable

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: DefaultVPC
      CidrBlock: !Ref PrivateSubnet1CIDR
      AvailabilityZone:
        Ref: AvailabilityZone1
      Tags:
      - Key: Name
        Value: "Private Subnet 1"

  PrivateSubnet1RouteAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: PrivateSubnet1
      RouteTableId:
        Ref: PrivateRouteTable

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: DefaultVPC
      CidrBlock: !Ref PrivateSubnet2CIDR
      AvailabilityZone:
        Ref: AvailabilityZone2
      Tags:
      - Key: Name
        Value: "Private Subnet 2"

  PrivateSubnet2RouteAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: PrivateSubnet2
      RouteTableId:
        Ref: PrivateRouteTable

  PrivateSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: DefaultVPC
      CidrBlock: !Ref PrivateSubnet3CIDR
      AvailabilityZone:
        Ref: AvailabilityZone3
      Tags:
      - Key: Name
        Value: "Private Subnet 3"

  PrivateSubnet3RouteAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: PrivateSubnet3
      RouteTableId:
        Ref: PrivateRouteTable

  FlowLogLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: VpcFlowAll

  FlowLogCWLPolicy:
    Type: AWS::IAM::ManagedPolicy
    Properties:
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          -
            Effect: "Allow"
            Action:
              - "logs:CreateLogGroup"
              - "logs:CreateLogStream"
              - "logs:PutLogEvents"
              - "logs:DescribeLogGroups"
              - "logs:DescribeLogStreams"
            Resource: !GetAtt FlowLogLogGroup.Arn

  FlowLogCWLRole:
    Type: AWS::IAM::Role
    Properties:
      Path: "/"
      ManagedPolicyArns:
        - !Ref FlowLogCWLPolicy
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: "Allow"
            Principal:
              Service: "vpc-flow-logs.amazonaws.com"
            Action:
              - "sts:AssumeRole"

  DefaultFlowLog:
    Type: "AWS::EC2::FlowLog"
    Properties:
      DeliverLogsPermissionArn: !GetAtt FlowLogCWLRole.Arn
      LogGroupName:
        Ref: FlowLogLogGroup
      ResourceId:
        Ref: DefaultVPC
      ResourceType: VPC
      TrafficType: ALL
